[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkharvest"
version = "0.1.0"
description = "Overlay cloud outage timelines with botnet activity proxy data."
readme = "README.md"
requires-python = ">=3.13"
license = "Unlicense"
authors = [{ name = "Seth Barrett" }]
keywords = ["botnet", "outages", "security", "dshield", "cloud", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.12",
  "matplotlib>=3.10.8",
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  "pydantic>=2.12.5",
  "python-dateutil>=2.9.0.post0",
  "requests>=2.32.5",
]

[project.urls]
Repository = "https://github.com/sethbarrett50/DarkHarvest"

[project.scripts]
dark-harvest = "dark_harvest.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.14.10",
]
