[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkharvest"
version = "0.2.0"
description = "Overlay cloud outage timelines with botnet activity proxy data."
readme = "README.md"
requires-python = ">=3.13"
license = "Unlicense"
authors = [{ name = "Seth Barrett" }]
keywords = ["botnet", "outages", "security", "dshield", "cloud", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "beautifulsoup4==4.14.3",
  "feedparser==6.0.12",
  "matplotlib==3.10.8",
  "numpy==2.4.3",
  "pandas==3.0.1",
  "pydantic==2.12.5",
  "python-dateutil==2.9.0.post0",
  "requests==2.33.0",
  "scipy==1.17.1",
  "statsmodels==0.14.6",
]

[project.urls]
Repository = "https://github.com/sethbarrett50/DarkHarvest"

[project.scripts]
dark-harvest = "dark_harvest.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.8",
  "twine==6.2.0",
]
